--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ bower.json
 # Ignore node_modules
 node_modules/
 
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+.idea/
+
+*.iml
